fixed spacing of content

--- a/css/index.css
+++ b/css/index.css
@@ -435,7 +435,7 @@ body {
   align-content: none;
 }
 .text-block-2 {
-  top: 100px;
+  top: 150px;
 }
 .tabs-link {
   font-size: 20px;
@@ -443,6 +443,13 @@ body {
   color: #222222;
   border: 1px solid #222222;
   text-align: center;
+  height: 60px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: none;
+  flex-wrap: none;
+  align-content: none;
 }
 .tabs {
   max-width: 100%;
