--- a/less/services.less
+++ b/less/services.less
@@ -1,5 +1,5 @@
 .text-block-2{
-    top: 100px;
+    top: 150px;
 }
 
 .tabs-link {
@@ -7,7 +7,9 @@
     font-weight: Bold; 
     color: @generalAndBorders; 
     border: 1px solid @generalAndBorders;
-    text-align: center; 
+    text-align: center;
+    height: 60px; 
+    .flex-box(@perfect-center:true); 
 }
 
 .tabs {
